                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-09-2005 added: Alternative ascii-gfx Filezilla (FTP) Welcome MSG. Disabled by default, to enable, first disable (comment) org. MSG, then uncomment new MSG. Use an ASCII capable font for display in ftpCLIENT. Thx to h8!
 - 12-09-2005 changed: XBMC DVD-Player is public now, and is now used by default when playing dvd's
 - 12-09-2005 fixed: id3 tags with ISO 8859 1 textencoding may not display correct, q:\system\libid3tag.dll got updated
 - 11-09-2005 updated: Polish language file (Thnx to napek)
 - 11-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 11-09-2005 updated: German language file
 - 11-09-2005 fixed: charset conversion from id3 tags was wrong
 - 11-09-2005 changed: libid3tag closes files immediately after reading and writing
 - 11-09-2005 changed: libid3tag only opens files on the hdd with write access
 - 11-09-2005 changed: my music files view now uses a true numeric sort for starting digits, like the library
 - 10-09-2005 fixed: play button in movie info screen now plays back in full screen
 - 10-09-2005 changed: my music files is now strictly the files view.  if you want to open up to the LAST open music window, use window ID of 5, or the window name "mymusic".  this is a virtual window which will open up music to the last window.
 - 10-09-2005 added: skin <hyperlink> and xboxmediacenter <startwindow> tags now accept window names
 - 10-09-2005 CRITCAL FIX: After libid3tag was added, music files opened over smb could be destroyed if write access was enabled on the share. It is sometimes enough to enter directory....